--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "deploy": "npm run build-for-gh-pages && npm run add-domain && npm run move-from-browser-folder | git pull && git add . && git commit -m 'New_front' && git push",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build-for-gh-pages": "ng build --configuration=production --output-path docs",
+    "add-domain": "echo velocilector.com > docs\\CNAME",
+    "move-from-browser-folder": "robocopy docs/browser docs /MOVE /E"
   },
   "private": true,
   "dependencies": {
