--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "src/background.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
