--- a/angular.json
+++ b/angular.json
@@ -27,15 +27,15 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/service-worker.js",
-              "src/background.js",
               "src/manifest.json",
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "src/background.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
